; ModuleID = '/home/carl/AnghaBench/arduino-esp32/cores/esp32/libb64/extr_cencode.c_base64_encode_chars.c'
source_filename = "/home/carl/AnghaBench/arduino-esp32/cores/esp32/libb64/extr_cencode.c_base64_encode_chars.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @base64_encode_chars(i8* %0, i32 %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %9 = call i32 @base64_init_encodestate(i32* %7)
  %10 = load i8*, i8** %4, align 8
  %11 = load i32, i32* %5, align 4
  %12 = load i8*, i8** %6, align 8
  %13 = call i32 @base64_encode_block(i8* %10, i32 %11, i8* %12, i32* %7)
  store i32 %13, i32* %8, align 4
  %14 = load i32, i32* %8, align 4
  %15 = load i8*, i8** %6, align 8
  %16 = load i32, i32* %8, align 4
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds i8, i8* %15, i64 %17
  %19 = call i32 @base64_encode_blockend(i8* %18, i32* %7)
  %20 = add nsw i32 %14, %19
  ret i32 %20
}

declare dso_local i32 @base64_init_encodestate(i32*) #1

declare dso_local i32 @base64_encode_block(i8*, i32, i8*, i32*) #1

declare dso_local i32 @base64_encode_blockend(i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
